--- a/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
+++ b/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
@@ -25,3 +25,97 @@
       </tr>
     </tbody>
   </table>
+
+
+  <!-- Hero Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-fullscreen">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Banner Image</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <form [formGroup]="UserUpdateFrom">
+
+                <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
+                <hr>
+                <div class="row g-3">
+                  <div class="col-6">
+                     <label class="form-label text-secondary">Username</label>
+                     <input type="text" class="form-control" formControlName="name"  >
+                  </div>
+                  <div class="col-6">
+                   <label class="form-label text-secondary">Email address</label>
+                   <input type="text" class="form-control"  >
+                 </div>
+                   <div class="col-6">
+                     <label class="form-label text-secondary">First Name</label>
+                     <input type="text" class="form-control" formControlName="first_name"  >
+                 </div>
+                 <div class="col-6">
+                     <label class="form-label text-secondary">Last Name</label>
+                     <input type="text" class="form-control" >
+                 </div>
+                 <div class="col-6">
+                 <select   class="form-control" >
+                    <option>option-1</option>
+                    <option>option-2</option>
+                    <option>option-3</option>
+                    <option>option-4</option>
+                    <option>option-5</option>
+                </select>
+                 </div>
+                 <div class="col-6">
+                    <select   class="form-control" >
+                        <option>option-1</option>
+                        <option>option-2</option>
+                        <option>option-3</option>
+                        <option>option-4</option>
+                        <option>option-5</option>
+                   </select>
+                    </div>
+               </div>
+               <h6 class="mb-0 mt-4 text-secondary">Contact Information</h6>
+               <hr>
+               <div class="row g-3">
+                <div class="col-12">
+                  <label class="form-label text-secondary">Address</label>
+                  <input type="text" class="form-control" >
+                 </div>
+                 <div class="col-6">
+                    <label class="form-label text-secondary">City</label>
+                    <input type="text" class="form-control" >
+                 </div>
+                 <div class="col-6">
+                  <label class="form-label text-secondary">Country</label>
+                  <input type="text" class="form-control" >
+                </div>
+                  <div class="col-6">
+                    <label class="form-label text-secondary">Pin Code</label>
+                    <input type="text" class="form-control" >
+                </div>
+                <div class="col-6">
+                    <label class="form-label text-secondary">Last Name</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="col-12">
+                  <label class="form-label text-secondary">About Me</label>
+                  <textarea class="form-control" rows="4" cols="4" placeholder="Describe yourself..."></textarea>
+                 </div>
+                </div>
+                <div class="text-start mt-3">
+                  <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
+                </div>
+                </form>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Hero Modal  -->
