--- a/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
+++ b/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
@@ -19,7 +19,7 @@
         <td class="text-center">{{userData.last_name}}</td>
         <td class="text-center" >{{userData.country}}</td>
         <td class="text-center">{{userData.pin_code}}</td>
-        <td><i class="fa-solid fa-eye text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="getUpdateFromModel(userData.id)"></i></td>
+        <td ><i class="fa-solid fa-eye text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="getUpdateFromModel(userData.id)"></i></td>
     
         <td class="text-center"><button class="btn btn-outline-danger" (click)="deleteUserDataById(userData.id)">Hard Delete</button></td>
       </tr>
@@ -28,6 +28,7 @@
 
 
   <!-- Hero Modal -->
+  <form [formGroup]="UserUpdateFrom">
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-fullscreen">
       <div class="modal-content">
@@ -37,26 +38,24 @@
         </div>
         <div class="modal-body">
           <div class="container">
-            <form [formGroup]="UserUpdateFrom">
-
                 <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
                 <hr>
                 <div class="row g-3">
                   <div class="col-6">
                      <label class="form-label text-secondary">Username</label>
-                     <input type="text" class="form-control" formControlName="name"  >
+                     <input type="text" class="form-control" formControlName="name">
                   </div>
                   <div class="col-6">
                    <label class="form-label text-secondary">Email address</label>
-                   <input type="text" class="form-control"  >
+                   <input type="text" class="form-control"  formControlName="email">
                  </div>
                    <div class="col-6">
                      <label class="form-label text-secondary">First Name</label>
-                     <input type="text" class="form-control" formControlName="first_name"  >
+                     <input type="text" class="form-control" formControlName="first_name">
                  </div>
                  <div class="col-6">
                      <label class="form-label text-secondary">Last Name</label>
-                     <input type="text" class="form-control" >
+                     <input type="text" class="form-control"  formControlName="last_name">
                  </div>
                  <div class="col-6">
                  <select   class="form-control" >
@@ -82,33 +81,32 @@
                <div class="row g-3">
                 <div class="col-12">
                   <label class="form-label text-secondary">Address</label>
-                  <input type="text" class="form-control" >
+                  <input type="text" class="form-control" formControlName="address">
                  </div>
                  <div class="col-6">
                     <label class="form-label text-secondary">City</label>
-                    <input type="text" class="form-control" >
+                    <input type="text" class="form-control" formControlName="city">
                  </div>
                  <div class="col-6">
                   <label class="form-label text-secondary">Country</label>
-                  <input type="text" class="form-control" >
+                  <input type="text" class="form-control" formControlName="country">
                 </div>
                   <div class="col-6">
                     <label class="form-label text-secondary">Pin Code</label>
-                    <input type="text" class="form-control" >
+                    <input type="text" class="form-control" formControlName="pin_code">
                 </div>
                 <div class="col-6">
                     <label class="form-label text-secondary">Last Name</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" formControlName="last_name">
                 </div>
                 <div class="col-12">
                   <label class="form-label text-secondary">About Me</label>
-                  <textarea class="form-control" rows="4" cols="4" placeholder="Describe yourself..."></textarea>
+                  <textarea class="form-control" rows="4" cols="4" placeholder="Describe yourself..." formControlName="about_me"></textarea>
                  </div>
                 </div>
                 <div class="text-start mt-3">
                   <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
                 </div>
-                </form>
           </div>
         </div>
         <div class="modal-footer">
@@ -118,4 +116,5 @@
       </div>
     </div>
   </div>
+</form>
   <!-- Hero Modal  -->
