--- a/src/app/angular-material/home/home.component.html
+++ b/src/app/angular-material/home/home.component.html
@@ -1,23 +1,28 @@
 <app-layout>
-<ng-container>
-<mat-tab-group>
-  <mat-tab label="From-1"> 
-    <app-form1
-    [variablesOfMatTabs]="emitVariablesOfAngularMaterial"
-    ></app-form1>
-  </mat-tab>
-  <mat-tab label="From-2">
-     <app-form2></app-form2>
-    </mat-tab>
-  <mat-tab label="From-3">
-     <app-form3></app-form3>
-    </mat-tab>
-  <mat-tab label="From-4">
-     <app-form4></app-form4>
-    </mat-tab>
-  <mat-tab label="From-5">
-     <app-form5></app-form5>
-    </mat-tab>
-</mat-tab-group>
-</ng-container>
+  <ng-container>
+    <mat-tab-group>
+      <mat-tab label="From-1">
+        <app-form1
+          
+          [variablesOfMatTabs]="emitVariablesOfAngularMaterial"
+        ></app-form1>
+      </mat-tab>
+      <mat-tab label="From-2">
+        <app-form2
+        [MyTestingData]="dataToSend"
+        [secondComponent]="dataToSend"
+        >
+      </app-form2>
+      </mat-tab>
+      <mat-tab label="From-3">
+        <app-form3></app-form3>
+      </mat-tab>
+      <mat-tab label="From-4">
+        <app-form4></app-form4>
+      </mat-tab>
+      <mat-tab label="From-5">
+        <app-form5></app-form5>
+      </mat-tab>
+    </mat-tab-group>
+  </ng-container>
 </app-layout>
