--- a/src/app/angular-bootstrap/state-crud/state-crud.component.html
+++ b/src/app/angular-bootstrap/state-crud/state-crud.component.html
@@ -104,9 +104,102 @@
         <td class="text-center">{{data.last_name}}</td>
         <td class="text-center" >{{data.country}}</td>
         <td class="text-center">{{data.pin_code}}</td>
-        <td ><i class="fa fa-pencil text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></td>
+        <td ><i class="fa fa-pencil text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="updateEditValues(i)"></i></td>
     
         <td class="text-center"><button class="btn btn-outline-danger" (click)="deleteStateValueByIndex(i)">Hard Delete</button></td>
       </tr>
     </tbody>
   </table>
+
+
+  <form [formGroup]="UpdateFrom">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-fullscreen">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Banner Image</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+                  <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
+                  <hr>
+                  <div class="row g-3">
+                    <div class="col-6">
+                       <label class="form-label text-secondary">Username</label>
+                       <input type="text" class="form-control" formControlName="name">
+                    </div>
+                    <div class="col-6">
+                     <label class="form-label text-secondary">Email address</label>
+                     <input type="text" class="form-control"  formControlName="email">
+                   </div>
+                     <div class="col-6">
+                       <label class="form-label text-secondary">First Name</label>
+                       <input type="text" class="form-control" formControlName="first_name">
+                   </div>
+                   <div class="col-6">
+                       <label class="form-label text-secondary">Last Name</label>
+                       <input type="text" class="form-control"  formControlName="last_name">
+                   </div>
+                   <div class="col-6">
+                    <label class="form-label text-secondary">Selector-1</label>
+                   <select  formControlName="select1" class="form-control" >
+                      <option>option-1</option>
+                      <option>option-2</option>
+                      <option>option-3</option>
+                      <option>option-4</option>
+                      <option>option-5</option>
+                  </select>
+                   </div>
+                   <div class="col-6">
+                    <label class="form-label text-secondary">Selector-2</label>
+                      <select formControlName="select2"  class="form-control" >
+                          <option>option-1</option>
+                          <option>option-2</option>
+                          <option>option-3</option>
+                          <option>option-4</option>
+                          <option>option-5</option>
+                     </select>
+                      </div>
+                 </div>
+                 <h6 class="mb-0 mt-4 text-secondary">Contact Information</h6>
+                 <hr>
+                 <div class="row g-3">
+                  <div class="col-12">
+                    <label class="form-label text-secondary">Address</label>
+                    <input type="text" class="form-control" formControlName="address">
+                   </div>
+                   <div class="col-6">
+                      <label class="form-label text-secondary">City</label>
+                      <input type="text" class="form-control" formControlName="city">
+                   </div>
+                   <div class="col-6">
+                    <label class="form-label text-secondary">Country</label>
+                    <input type="text" class="form-control" formControlName="country">
+                  </div>
+                    <div class="col-6">
+                      <label class="form-label text-secondary">Pin Code</label>
+                      <input type="text" class="form-control" formControlName="pin_code">
+                  </div>
+                  <div class="col-6">
+                      <label class="form-label text-secondary">Last Name</label>
+                      <input type="text" class="form-control" formControlName="last_name">
+                  </div>
+                  <div class="col-12">
+                    <label class="form-label text-secondary">About Me</label>
+                    <textarea class="form-control" rows="4" cols="4" placeholder="Describe yourself..." formControlName="about_me"></textarea>
+                   </div>
+                  </div>
+                  <div class="text-start mt-3">
+                    <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Update Changes</button>
+                  </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Update changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
