--- a/src/app/angular-bootstrap/state-crud/state-crud.component.html
+++ b/src/app/angular-bootstrap/state-crud/state-crud.component.html
@@ -98,13 +98,13 @@
       </tr>
     </thead>
     <tbody class="text-dark">
-      <tr *ngFor="let data of StateValues">
+      <tr *ngFor="let data of StateValues ; let i = index">
         <th class="text-center"></th>
         <td class="text-center text-dark">{{data.first_name}}</td>
         <td class="text-center">{{data.last_name}}</td>
         <td class="text-center" >{{data.country}}</td>
         <td class="text-center">{{data.pin_code}}</td>
-        <td ><i class="fa fa-pencil text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="updateEditValues(i)"></i></td>
+        <td ><i class="fa fa-pencil text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="updateEditValues(data , i)"></i></td>
     
         <td class="text-center"><button class="btn btn-outline-danger" (click)="deleteStateValueByIndex(i)">Hard Delete</button></td>
       </tr>
