--- a/src/app/angular-bootstrap/state-crud/state-crud.component.html
+++ b/src/app/angular-bootstrap/state-crud/state-crud.component.html
@@ -111,8 +111,7 @@
     </tbody>
   </table>
 
-<div class="div" *ngFor="let data of StateValues ; let i = index" >
-  <form [formGroup]="UpdateFrom"  (ngSubmit)="SubmitUpdated(i)">
+  <form [formGroup]="UpdateFrom"  (ngSubmit)="SubmitUpdated()">
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
@@ -203,4 +202,3 @@
       </div>
     </div>
   </form>
-</div>
