--- a/src/app/angular-material/add-user-form/add-user-form.component.html
+++ b/src/app/angular-material/add-user-form/add-user-form.component.html
@@ -2,24 +2,24 @@
 
     <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
     <hr>
-    <div class="row g-3">
-      <div class="col-6">
+    <div class="row">
+      <div class="col-5">
          <label class="form-label text-secondary">Username</label>
          <input type="text" class="form-control"  formControlName="name">
       </div>
-      <div class="col-6">
+      <div class="col-5">
        <label class="form-label text-secondary">Email address</label>
        <input type="text" class="form-control" formControlName="email" >
      </div>
-       <div class="col-6">
+       <div class="col-5">
          <label class="form-label text-secondary">First Name</label>
          <input type="text" class="form-control"  formControlName="first_name">
      </div>
-     <div class="col-6">
+     <div class="col-5">
          <label class="form-label text-secondary">Last Name</label>
          <input type="text" class="form-control" formControlName="last_name">
      </div>
-     <div class="col-6">
+     <div class="col-5">
      <select formControlName="select1"  class="form-control" >
         <option>option-1</option>
         <option>option-2</option>
@@ -28,7 +28,7 @@
         <option>option-5</option>
     </select>
      </div>
-     <div class="col-6">
+     <div class="col-5">
         <select formControlName="select2"  class="form-control" >
             <option>option-1</option>
             <option>option-2</option>
@@ -45,11 +45,11 @@
       <label class="form-label text-secondary">Address</label>
       <input type="text" class="form-control" formControlName="address">
      </div>
-     <div class="col-6">
+     <div class="col-5">
         <label class="form-label text-secondary">City</label>
         <input type="text" class="form-control" formControlName="city">
      </div>
-     <div class="col-6">
+     <div class="col-">
       <label class="form-label text-secondary">Country</label>
       <input type="text" class="form-control" formControlName="country">
     </div>
