--- a/src/app/angular-material/add-user-form/add-user-form.component.html
+++ b/src/app/angular-material/add-user-form/add-user-form.component.html
@@ -1,51 +1,3 @@
-<!-- <form>
-    <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
-    <hr>
-    <div class="row">
-      <div class="col-5">
-         <label class="form-label text-secondary">Username</label>
-         <input type="text" class="form-control"  formControlName="name">
-      </div>
-      <div class="col-5">
-       <label class="form-label text-secondary">Email address</label>
-       <input type="text" class="form-control" formControlName="email" >
-     </div>
-       <div class="col-5">
-         <label class="form-label text-secondary">First Name</label>
-         <input type="text" class="form-control"  formControlName="first_name">
-     </div>
-     <div class="col-5">
-         <label class="form-label text-secondary">Last Name</label>
-         <input type="text" class="form-control" formControlName="last_name">
-     </div>
-
-   </div>
-   <h6 class="mb-0 mt-4 text-secondary">Contact Information</h6>
-   <hr>
-   <div class="row ">
-     <div class="col-5">
-        <label class="form-label text-secondary">City</label>
-        <input type="text" class="form-control" formControlName="city">
-     </div>
-     <div class="col-5">
-      <label class="form-label text-secondary">Country</label>
-      <input type="text" class="form-control" formControlName="country">
-    </div>
-      <div class="col-5">
-        <label class="form-label text-secondary">Pin Code</label>
-        <input type="text" class="form-control" formControlName="pin_code">
-    </div>
-    <div class="col-5">
-        <label class="form-label text-secondary">Last Name</label>
-        <input type="text" class="form-control" formControlName="last_name">
-    </div>
-
-    </div>
-    <div class="text-start mt-3">
-      <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
-    </div>
-    </form> -->
-
     <div class="col-12">
         <div class="row">
           <div class="col-12">
@@ -53,7 +5,7 @@
               <div class="card-body">
                 <form>
     
-                    <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
+                    <h2 class="mb-0 mt-4 text-center">USER INFORMATION</h2>
                     <hr>
                     <div class="row g-3">
                       <div class="col-4">
