--- a/src/app/angular-material/add-user-form/add-user-form.component.html
+++ b/src/app/angular-material/add-user-form/add-user-form.component.html
@@ -33,6 +33,26 @@
                         <input type="text" class="form-control" formControlName="last_name">
                     </div>
                    </div>
+                   <div class="row g-3">
+                     <div class="col-4">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                          Default checkbox
+                        </label>
+                   </div>
+                   <div class="col-4">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      Default checkbox
+                    </label>
+                   </div>
+                   <div class="col-4">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      Default checkbox
+                    </label>
+                  </div>
+                 </div>
                    <h6 class="mb-0 mt-4 text-secondary">Contact Information</h6>
                    <hr>
                    <div class="row g-3">
