--- a/src/app/angular-material/add-user-form/add-user-form.component.html
+++ b/src/app/angular-material/add-user-form/add-user-form.component.html
@@ -4,7 +4,6 @@
             <div class="card radius-10 Formcard">
               <div class="card-body">
                 <form>
-    
                     <h2 class="mb-0 mt-4 text-center">USER INFORMATION</h2>
                     <hr>
                     <div class="row g-3">
@@ -33,22 +32,24 @@
                         <input type="text" class="form-control" formControlName="last_name">
                     </div>
                    </div>
-                   <div class="row g-3">
+
+
+                   <div class="row g-3 mt-3">
                      <div class="col-4">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label ms-2" for="flexCheckDefault">
                           Default checkbox
                         </label>
                    </div>
                    <div class="col-4">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
+                    <label class="form-check-label ms-2" for="flexCheckDefault">
                       Default checkbox
                     </label>
                    </div>
                    <div class="col-4">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
+                    <label class="form-check-label ms-2" for="flexCheckDefault">
                       Default checkbox
                     </label>
                   </div>
