--- a/src/app/angular-material/add-user-form/add-user-form.component.html
+++ b/src/app/angular-material/add-user-form/add-user-form.component.html
@@ -83,6 +83,7 @@
                      </div>
                     </div>
                     <div class="text-start mt-3">
+                        <button class="btn btn-danger" (click)="close()">Cancel</button>
                       <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
                     </div>
                     </form>
