--- a/src/app/angular-material/add-user-form/add-user-form.component.html
+++ b/src/app/angular-material/add-user-form/add-user-form.component.html
@@ -8,11 +8,11 @@
                     <hr>
                     <div class="row g-3">
                       <div class="col-4">
-                         <label class="form-label text-secondary">Username</label>
+                         <label class="form-label text-secondary">FirstName</label>
                          <input type="text" class="form-control"  formControlName="name">
                       </div>
                       <div class="col-4">
-                        <label class="form-label text-secondary">Username</label>
+                        <label class="form-label text-secondary">LastName</label>
                         <input type="text" class="form-control"  formControlName="name">
                      </div>
                       <div class="col-4">
@@ -20,11 +20,11 @@
                        <input type="text" class="form-control" formControlName="email" >
                      </div>
                        <div class="col-4">
-                         <label class="form-label text-secondary">First Name</label>
+                         <label class="form-label text-secondary">Education</label>
                          <input type="text" class="form-control"  formControlName="first_name">
                      </div>
                      <div class="col-4">
-                         <label class="form-label text-secondary">Last Name</label>
+                         <label class="form-label text-secondary">House No#</label>
                          <input type="text" class="form-control" formControlName="last_name">
                      </div>
                      <div class="col-4">
@@ -38,19 +38,19 @@
                      <div class="col-4">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         <label class="form-check-label ms-2" for="flexCheckDefault">
-                          Default checkbox
+                        checkbox-1
                         </label>
                    </div>
                    <div class="col-4">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="form-check-label ms-2" for="flexCheckDefault">
-                      Default checkbox
+                       checkbox-2
                     </label>
                    </div>
                    <div class="col-4">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="form-check-label ms-2" for="flexCheckDefault">
-                      Default checkbox
+                      checkbox-3
                     </label>
                   </div>
                  </div>
